--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<!-- Write your code here! -->
+<body><h1></h1>
+<p>
+    <strong></strong>
+    <em></em>
+    <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">HTML></a>
+    <table></table>
+</p></body>
